# OS_1

./: .gitignore.txt  Lab1.sln
Creator/: CMakeLists.txt  Creator.cpp  Creator.vcxproj
Creator/x64/Debug/: Creator.exe.recipe  Creator.ilk  vc143.idb
Creator/x64/Debug/Creator.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Creator/x64/Release/: Creator.exe.recipe  Creator.iobj  Creator.ipdb
Creator/x64/Release/Creator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
For_tests/: main_functions.cpp
For_tests/x64/Debug/: vc143.idb
For_tests/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate
Lab_1/: CMakeLists.txt
Lab_1/For_tests/: Project1.vcxproj  header.h
Lab_1/For_tests/x64/Debug/: Project1.exe.recipe
Lab_1/main/: main.cpp
Lab_1/tests/: test.cpp
Repoter/: CMakeLists.txt  Repoter.vcxproj
Repoter/x64/Debug/: Repoter.exe.recipe  Repoter.ilk  vc143.idb
Repoter/x64/Debug/Repoter.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Repoter/x64/Release/: Repoter.exe.recipe  Repoter.iobj  Repoter.ipdb
Repoter/x64/Release/Repoter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Repoter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab_2/: CMakeLists.txt  main.cpp
lab_2/Tests/: CMakeLists.txt  Header.h  main_functions.cpp  test.cpp
lab_2/main/: Header.h  main.cpp
lab_2/main_2/: CMakeLists.txt  Header.h  main_thread.cpp
main/: CMakeLists.txt  Header.h  main.cpp  main.vcxproj
main/x64/Debug/: main.exe.recipe  main.ilk  vc143.idb
main/x64/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  main.lastbuildstate
main/x64/Release/: main.exe.recipe  main.iobj  main.ipdb
main/x64/Release/main.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/: CMakeLists.txt
x64/Release/: g  k
